--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,12 +1,12 @@
 <div class="row-fluid">
     <div class="card-deck">
       <div class="col-xs-12 col-sm-8 col-md-6 col-lg-4 col-xl-3 offset-sm-2 offset-md-0" 
-          *ngFor="let task of tasks"
+          *ngFor="let task of tasks; let i = index"
       >
         <div class="card mt-5 text-white bg-primary" >
           <div class="card-body">
             <h2 class="card-title">{{ task.title }}</h2>
-            <i class="material-icons remove">cancel</i>
+            <i class="material-icons remove" data-toggle="modal" data-target="#deleteTaskModal" (click)="setDeleteTargetTaskId(i)">cancel</i>
             <hr>
             <h5 class="card-text">{{ task.text }}</h5>
             <hr>
@@ -17,4 +17,25 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
+
+<!-- Delete Task Modal -->
+<div class="modal fade" id="deleteTaskModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Deleteing Task</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <p>Are you sure you want to delete this task?</p>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteTask()">Yes</button>
+        </div>
+        </div>
+    </div>
+</div>
