Added updating tasks function. Tasks can now be checked and unchecked.

--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -6,12 +6,12 @@
         <div class="card mt-5 text-white bg-primary" >
           <div class="card-body">
             <h2 class="card-title">{{ task.title }}</h2>
-            <i class="material-icons remove" data-toggle="modal" data-target="#deleteTaskModal" (click)="setDeleteTargetTaskId(i)">cancel</i>
+            <i class="material-icons remove" data-toggle="modal" data-target="#deleteTaskModal" (click)="setTargetTaskId(i)">cancel</i>
             <hr>
             <h5 class="card-text">{{ task.text }}</h5>
             <hr>
-            <i *ngIf= "!task.checked" class="material-icons checkbox">check_box_outline_blank</i>
-            <i *ngIf= "task.checked" class="material-icons checkbox">check_box</i>
+            <i *ngIf= "!task.checked" class="material-icons checkbox" (click)="changeCheckedAndUpdate(i)">check_box_outline_blank</i>
+            <i *ngIf= "task.checked" class="material-icons checkbox" (click)="changeCheckedAndUpdate(i)">check_box</i>
             <p class="card-text">{{ task.dateTime }}</p>
           </div>
         </div>
