--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,3 +1,19 @@
-<p>
-  add-task works!
-</p>
+<div class="row">
+  <div class="col-xs-10 col-sm-8 col-md-6 offset-xs-1 offset-sm-2 offset-md-3 mt-5 form-wrapper">
+    <form (ngSubmit)="onSubmit(form)" #form="ngForm">
+      <div class="h1-wrapper">
+        <h1 class="mt-5">Create New Task</h1>
+        <p>Both Title and Text are required!</p>
+      </div>
+      <div class="form-group mt-5">
+        <label for="title">Title</label>
+        <input type="text" id="title" name="title" ngModel class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="task-text">Example textarea</label>
+        <textarea id="text" name="text" rows="3" ngModel class="form-control" required></textarea>
+      </div>
+      <button class="btn btn-success form-control" type="submit" [disabled]="!form.form.valid">Submit</button>
+    </form>
+  </div>
+</div>
