--- a/src/app/find-task/find-task.component.html
+++ b/src/app/find-task/find-task.component.html
@@ -1,3 +1,4 @@
+<!-- Search DIV-->
 <div class="row">
   <div class="col-xs-10 col-sm-8 col-md-6 offset-xs-1 offset-sm-2 offset-md-3 mt-5 form-wrapper">
     <div class="form-group mt-5">
@@ -7,6 +8,7 @@
   </div>
 </div>
 
+<!-- Task Cards -->
 <div class="row-fluid">
   <div class="card-deck">
     <div class="col-xs-12 col-sm-8 col-md-6 col-lg-4 col-xl-3 offset-sm-2 offset-md-0" 
@@ -25,5 +27,26 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+<!-- Delete Task Modal -->
+<div class="modal fade" id="deleteTaskModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+      <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Deleteing Task</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+          </button>
+      </div>
+      <div class="modal-body">
+          <p>Are you sure you want to delete this task?</p>
+      </div>
+      <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteTask()">Yes</button>
+      </div>
+      </div>
   </div>
 </div>
